# text-adventure

./: .gitignore  CMakeLists.txt  Makefile  application.cc  application.hh  description.cc  description.hh  engine.cc  engine.hh  exit.cc  exit.hh  game.world  input_handler.cc  input_handler.hh  interface.cc  interface.hh  item.cc  item.hh  loader.cc  loader.hh  main.cc  player.cc  player.hh  room.cc  room.hh  save_menu.cc  save_menu.hh  world.cc  world.hh  world.vim
art/: font.xcf
doc/: characters  todo
misc/: world.vim
sdl/: screen.cc  screen.hh  surface.cc  surface.hh
src/: character.cc  character.hh  description.cc  description.hh  engine.cc  engine.hh  exit.cc  interface.cc  interface.hh  item.cc  item.hh  loader.hh  main.cc  save_menu.cc  save_menu.hh  world.hh
src/sdl/: event.cc  event.hh  screen.hh
